kubernetes/apps/observability/blackbox-exporter/networkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: blackbox-exporter-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: prometheus-blackbox-exporter
    egress:
      - toFQDNs:
          - matchName: kvm.internal
        toPorts:
          - ports:
              - port: "80"
      - toFQDNs:
          - matchName: nas.internal
        toPorts:
          - ports:
              - port: "444"
              - port: "2049"
      - toFQDNs:
          - matchName: unifi.internal
        toPorts:
          - ports:
              - port: "443"
